<resources>
    <string name="app_name">For_Assignment</string>
    <string name="trip">Trip Management</string>
    <string name="name_trip">Name Trip*</string>
    <string name="destination">Destination*</string>
    <string name="doT">Date of the Trip*</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="require">Required Risk Assessment*</string>
    <string name="description">Description</string>
    <string name="add_button">Add to Database</string>
    <string name="update_button">Update</string>
    <string name="delete">Delete</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="upload">Upload</string>
    <string name="type">Type</string>
    <string name="travel">Travel</string>
    <string name="food">Food</string>
    <string name="amount">Amount</string>
    <string name="transport">Transport</string>
    <string name="time">Time of the Expense</string>
    <string-array name="type_expenses">
        <item>Choose</item>
        <item>Food</item>
        <item>Transport</item>
        <item>Travel</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>