<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTripActivity">

    <TextView
        android:id="@+id/viewNameTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_trip"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="200dp"
        />

    <EditText
        android:id="@+id/inputNameTrip"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="60dp"
        android:drawableLeft="@drawable/trip"
        android:paddingLeft="10dp"
        android:drawablePadding="10dp"
        android:background="@drawable/edittext_desigb"
        android:ems="20"
        android:hint="@string/name_trip"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/viewDestination"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewNameTrip" />

    <TextView
        android:id="@+id/viewDestination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="200dp"
        android:text="@string/destination"
        android:textColor="@color/colorText"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/inputDestination"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNameTrip"
        />

    <EditText
        android:id="@+id/inputDestination"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:background="@drawable/edittext_desigb"
        android:layout_marginEnd="60dp"
        android:drawableLeft="@drawable/destination"
        android:drawablePadding="10dp"
        android:ems="30"
        android:hint="@string/destination"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewDestination" />
    <TextView
        android:id="@+id/DoT_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="200dp"
        android:text="@string/doT"
        android:textColor="@color/colorText"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/inputDestination" />

    <EditText
        android:id="@+id/inputDoT"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="48dp"
        android:background="@drawable/edittext_desigb"
        android:ems="16"
        android:hint="@string/doT"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintRight_toRightOf="@id/button_date"
        app:layout_constraintTop_toBottomOf="@+id/DoT_text" />

    <Button
        android:id="@+id/button_date"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_design"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:drawableLeft="@drawable/calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DoT_text"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/viewRequired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="200dp"
        android:text="@string/require"
        android:textColor="@color/colorText"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_date" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="289dp"
        android:layout_height="49dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewRequired">

        <RadioButton
            android:id="@+id/radio_yes"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:checked="true"
            android:text="@string/yes"
            android:textColor="@color/red" />

        <RadioButton
            android:id="@+id/radio_no"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:text="@string/no"
            android:textColor="@color/red"/>
    </RadioGroup>
    <TextView
        android:id="@+id/viewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="200dp"
        android:text="@string/description"
        android:textColor="@color/colorText"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        />

    <EditText
        android:id="@+id/inputDescription"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/edittext_desigb"
        android:drawableLeft="@drawable/description"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:ems="30"
        android:hint="@string/description"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewDescription" />

    <Button
        android:id="@+id/add_Trip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/button_design"
        android:text="@string/add_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>