<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateExpenseActivity">


    <TextView
        android:id="@+id/typeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="330dp"
        android:layout_marginBottom="10dp"
        android:text="@string/type"
        android:textColor="@color/colorText"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spinner_type2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_type2"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/amountView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeView"
        tools:ignore="SpeakableTextPresentCheck"/>


    <TextView
        android:id="@+id/amountView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="303dp"
        android:layout_marginBottom="10dp"
        android:text="@string/amount"
        android:textColor="@color/colorText"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/inputAmount2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_type2"
        tools:ignore="MissingConstraints" />
    <EditText
        android:id="@+id/inputAmount2"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="30dp"
        android:drawableLeft="@drawable/ic_money"
        android:drawablePadding="10dp"
        android:ems="30"
        android:paddingLeft="10dp"
        android:background="@drawable/edittext_desigb"
        android:hint="@string/amount"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/DoT_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.371"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountView" />

    <TextView
        android:id="@+id/DoT_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="189dp"
        android:layout_marginBottom="10dp"
        android:text="@string/time"
        android:textColor="@color/colorText"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/inputDoT2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputAmount2"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/inputDoT2"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="48dp"
        android:ems="16"
        android:paddingLeft="10dp"
        android:hint="@string/time"
        android:minHeight="48dp"
        android:inputType="date"
        android:background="@drawable/edittext_desigb"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintRight_toRightOf="@id/button_date2"
        app:layout_constraintTop_toBottomOf="@+id/DoT_text" />

    <Button
        android:id="@+id/button_date2"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:drawableLeft="@drawable/calendar"
        android:background="@drawable/button_design"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.982"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DoT_text"
        tools:ignore="SpeakableTextPresentCheck" />
    <Button
        android:id="@+id/button_updateExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="107dp"
        android:text="@string/update_button"
        android:background="@drawable/button_design"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputDoT2"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>